# helix-move

./: .gitignore  Cargo.toml  flake.nix
helix-move-bin/: Cargo.toml
helix-move-bin/src/: main.rs
helix-move-lib/: Cargo.toml
helix-move-lib/src/: lib.rs  main.rs
helix-move-lsp/: Cargo.toml
helix-move-lsp/src/: main.rs
rand-dir/: Cargo.toml
rand-dir/src/: main.rs
