[package]
name = "helix-move-bin"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "helix-move"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
helix-move-lib = { version = "0.1.0", path = "../helix-move-lib" }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"
toml = "1.0.1"
